<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="Nacionalidad."
        android:textColor="#0000FF"
        android:textStyle="bold"
        android:textSize="18sp" />


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:orientation="vertical"
        android:background="@drawable/bordes">


        <RadioGroup android:id="@+id/GrbGrupo1"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <RadioButton
                android:id="@+id/RbOpcion1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radioNacionalizado" />

            <RadioButton
                android:id="@+id/RbOpcion2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radioComunitarioo" />

            <RadioButton
                android:id="@+id/RbOpcion3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radioExtracomunitario" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/botones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp">

        <Button
            android:id="@+id/botonGrabarNacionalidad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/buttonRecord" />

        <Button
            android:id="@+id/botonResetearNacionalidad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/buttonCancel" />

        <Button
            android:id="@+id/botonLimpiarNacionalidad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Regresar" />
    </LinearLayout>
</LinearLayout>
